CHANGELOG
=========
v1.26b1 - WIP - Base: KANG-20111210 - lordModUE-8.5-CFS
          ICETool: Fixed bootsound option
          ICETool: Autorenice feature of running processes

v1.25   - Base: KANG-20111125 - lordModUE-8.5-CFS
          Base: Zeam Launcher by default, removed UDLauncher
          ICETool: Included v0.90, all additional scripts merged into one
          ICETool: Fixed the goddam missing tabs bug
          Apps: Google Maps 6.0.0 All Roads
          Apps: Upgraded apps and extraapps
v1.24   - Base: KANG-20111125 - lordModUE-8.5-CFS
          Apps: Upgraded SysTune, Titanium Backup
          Apps: Removed Volume+, added AudioFXWidget
          Apps: Added DHD Proximity Recalibrator
          Apps: Included Flash Player 11, ChainFire3D on main ROM
v1.24b2 - Base: KANG-20111119 - lordModUE-8.5-CFS
          Apps: Google Street View upgraded
          Apps: Google Maps v5.12 all roads
          Apps: Upgraded Youtube
          ICETool: autorun.txt overlay command to customize /system or /data
          ICETool: Bravia Engine on / off (disabled by default)
          Framework: New battery icons, prevented 5% jumping
          Apps: Prevent sound jumping by replacing DSPManager with Volume+
          Kitchen: Workaround to faulty apktool - new framework-res tweaks coming soon
v1.24b1 - Base: KANG-20111102.zip - lordModUE-8.3-CFS-b2
          Framework: New battery icons with percentage (by "The Unknown Noob")
          Apps: Chainfire3D preconfigured, with plugins and shaders on /sdcard
          Extraapps: Flash Player downgraded to 10.2.156.12
v1.23   - Base: KANG-20111102.zip - lordModUE-8.2-CFS
          Tweaks: retweaked ondemand
          Tweaks: low memory killer
          Removed Protips.apk
v1.23b2 - Base: KANG-20111102.zip - lordModUE-8.2-CFS-b6
          Base: NO_NORMALIZER_SLEEPERS and NO_NEW_FAIR_SLEEPERS scheduler tweaks
          Browser: Removed broken Browser.apk dependant on older framework