@@ -1,5 +1,5 @@
 # Version
-BLACKICE_VERSION=BlackICE.v1.25
+BLACKICE_VERSION=BlackICE.v1.26b1
 : ${ANDROID_ROOT:=$HOME/ANDROID/android-sdk-linux_x86}
 
 # Tasks
